--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "jest --runInBand",
     "test:mocha": "nyc --all --include models --include services --include controllers mocha test/unit/*.js --exit",
+    "mocha": "mocha ./test/unit/**/*$NAME*.js --exit",
     "start": "node index.js",
     "debug": "nodemon index.js",
     "lint": "eslint --no-inline-config --no-error-on-unmatched-pattern -c .eslintrc.json . --ext .js, .jsx"
@@ -29,15 +30,18 @@
     "express-rescue": "^1.1.26",
     "frisby": "^2.1.2",
     "jest": "^26.4.1",
-    "mysql2": "^2.3.0"
+    "mysql2": "^2.3.3",
+    "sequelize": "^6.14.1",
+    "sequelize-cli": "^6.4.1"
   },
   "devDependencies": {
     "chai": "^4.3.4",
     "eslint-config-trybe-backend": "^1.0.3",
     "mocha": "^8.4.0",
     "mysql-import": "^5.0.21",
+    "nodemon": "^2.0.4",
     "nyc": "^15.1.0",
-    "sinon": "^11.1.1",
-    "nodemon": "^2.0.4"
+    "sequelize-test-helpers": "^1.4.2",
+    "sinon": "^11.1.1"
   }
 }
