--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest --runInBand",
     "test:mocha": "nyc --all --include models --include services --include controllers mocha test/unit/*.js --exit",
     "mocha": "mocha ./test/unit/**/*$NAME*.js --exit",
+    "restore": "npx sequelize db:create && npx sequelize db:migrate",
     "start": "node index.js",
     "debug": "nodemon index.js",
     "lint": "eslint --no-inline-config --no-error-on-unmatched-pattern -c .eslintrc.json . --ext .js, .jsx"
@@ -30,6 +31,7 @@
     "express-rescue": "^1.1.26",
     "frisby": "^2.1.2",
     "jest": "^26.4.1",
+    "joi": "^17.5.0",
     "mysql2": "^2.3.3",
     "sequelize": "^6.14.1",
     "sequelize-cli": "^6.4.1"
