--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "jest --runInBand",
     "test:mocha": "nyc --all --include models --include services --include controllers mocha test/unit/*.js --exit",
     "mocha": "mocha ./test/unit/**/*$NAME*.js --exit",
-    "restore": "npx sequelize db:create && npx sequelize db:migrate && npx sequelize db:seed:all",
+    "restore": "npx sequelize db:drop && npx sequelize db:create && npx sequelize db:migrate && npx sequelize db:seed:all",
     "start": "node index.js",
     "debug": "nodemon index.js",
     "lint": "eslint --no-inline-config --no-error-on-unmatched-pattern -c .eslintrc.json . --ext .js, .jsx"
